# watapico

./: .gitignore  CMakeLists.txt  LICENSE  README.md  memmap_watapico.ld  purple.h  rom_manager.html  watapico.c
roms/: makeroms.py  roms.h
